@@ -8,7 +8,6 @@ package org.elasticsearch.xpack.analytics.movingPercentiles;
 
 import org.HdrHistogram.DoubleHistogram;
 import org.elasticsearch.search.DocValueFormat;
-import org.elasticsearch.search.aggregations.AggregationExecutionException;
 import org.elasticsearch.search.aggregations.AggregationReduceContext;
 import org.elasticsearch.search.aggregations.InternalAggregation;
 import org.elasticsearch.search.aggregations.InternalAggregations;
@@ -27,7 +26,7 @@ import org.elasticsearch.search.aggregations.support.AggregationPath;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 public class MovingPercentilesPipelineAggregator extends PipelineAggregator {
 
@@ -42,7 +41,6 @@ public class MovingPercentilesPipelineAggregator extends PipelineAggregator {
 
     @Override
     public InternalAggregation reduce(InternalAggregation aggregation, AggregationReduceContext reduceContext) {
-        @SuppressWarnings("unchecked")
         InternalMultiBucketAggregation<?, ?> histo = (InternalMultiBucketAggregation<?, ?>) aggregation;
         List<? extends InternalMultiBucketAggregation.InternalBucket> buckets = histo.getBuckets();
         HistogramFactory factory = (HistogramFactory) histo;
@@ -55,7 +53,7 @@ public class MovingPercentilesPipelineAggregator extends PipelineAggregator {
         switch (config.method) {
             case TDIGEST -> reduceTDigest(buckets, histo, newBuckets, factory, config);
             case HDR -> reduceHDR(buckets, histo, newBuckets, factory, config);
-            default -> throw new AggregationExecutionException(
+            default -> throw new IllegalArgumentException(
                 AbstractPipelineAggregationBuilder.BUCKETS_PATH_FIELD.getPreferredName()
                     + " references an unknown percentile aggregation method: ["
                     + config.method
@@ -75,8 +73,8 @@ public class MovingPercentilesPipelineAggregator extends PipelineAggregator {
 
         List<TDigestState> values = buckets.stream()
             .map(b -> resolveTDigestBucketValue(histo, b, bucketsPaths()[0]))
-            .filter(v -> v != null)
-            .collect(Collectors.toList());
+            .filter(Objects::nonNull)
+            .toList();
 
         int index = 0;
         for (InternalMultiBucketAggregation.InternalBucket bucket : buckets) {
@@ -94,7 +92,7 @@ public class MovingPercentilesPipelineAggregator extends PipelineAggregator {
                     if (state == null) {
                         // We have to create a new TDigest histogram because otherwise it will alter the
                         // existing histogram and bucket value
-                        state = new TDigestState(bucketState.compression());
+                        state = TDigestState.createUsingParamsFrom(bucketState);
                     }
                     state.add(bucketState);
 
@@ -102,13 +100,14 @@ public class MovingPercentilesPipelineAggregator extends PipelineAggregator {
             }
 
             if (state != null) {
-                List<InternalAggregation> aggs = bucket.getAggregations()
-                    .asList()
-                    .stream()
-                    .map((p) -> (InternalAggregation) p)
-                    .collect(Collectors.toList());
-                aggs.add(new InternalTDigestPercentiles(name(), config.keys, state, config.keyed, config.formatter, metadata()));
-                newBucket = factory.createBucket(factory.getKey(bucket), bucket.getDocCount(), InternalAggregations.from(aggs));
+                newBucket = factory.createBucket(
+                    factory.getKey(bucket),
+                    bucket.getDocCount(),
+                    InternalAggregations.append(
+                        bucket.getAggregations(),
+                        new InternalTDigestPercentiles(name(), config.keys, state, config.keyed, config.formatter, metadata())
+                    )
+                );
             }
             newBuckets.add(newBucket);
             index++;
@@ -125,8 +124,8 @@ public class MovingPercentilesPipelineAggregator extends PipelineAggregator {
 
         List<DoubleHistogram> values = buckets.stream()
             .map(b -> resolveHDRBucketValue(histo, b, bucketsPaths()[0]))
-            .filter(v -> v != null)
-            .collect(Collectors.toList());
+            .filter(Objects::nonNull)
+            .toList();
 
         int index = 0;
         for (InternalMultiBucketAggregation.InternalBucket bucket : buckets) {
@@ -152,20 +151,21 @@ public class MovingPercentilesPipelineAggregator extends PipelineAggregator {
             }
 
             if (state != null) {
-                List<InternalAggregation> aggs = bucket.getAggregations()
-                    .asList()
-                    .stream()
-                    .map((p) -> (InternalAggregation) p)
-                    .collect(Collectors.toList());
-                aggs.add(new InternalHDRPercentiles(name(), config.keys, state, config.keyed, config.formatter, metadata()));
-                newBucket = factory.createBucket(factory.getKey(bucket), bucket.getDocCount(), InternalAggregations.from(aggs));
+                newBucket = factory.createBucket(
+                    factory.getKey(bucket),
+                    bucket.getDocCount(),
+                    InternalAggregations.append(
+                        bucket.getAggregations(),
+                        new InternalHDRPercentiles(name(), config.keys, state, config.keyed, config.formatter, metadata())
+                    )
+                );
             }
             newBuckets.add(newBucket);
             index++;
         }
     }
 
-    private PercentileConfig resolvePercentileConfig(
+    private static PercentileConfig resolvePercentileConfig(
         MultiBucketsAggregation agg,
         InternalMultiBucketAggregation.InternalBucket bucket,
         String aggPath
@@ -195,7 +195,7 @@ public class MovingPercentilesPipelineAggregator extends PipelineAggregator {
         throw buildResolveError(agg, aggPathsList, propertyValue, "percentiles");
     }
 
-    private TDigestState resolveTDigestBucketValue(
+    private static TDigestState resolveTDigestBucketValue(
         MultiBucketsAggregation agg,
         InternalMultiBucketAggregation.InternalBucket bucket,
         String aggPath
@@ -208,7 +208,7 @@ public class MovingPercentilesPipelineAggregator extends PipelineAggregator {
         return ((InternalTDigestPercentiles) propertyValue).getState();
     }
 
-    private DoubleHistogram resolveHDRBucketValue(
+    private static DoubleHistogram resolveHDRBucketValue(
         MultiBucketsAggregation agg,
         InternalMultiBucketAggregation.InternalBucket bucket,
         String aggPath
@@ -221,7 +221,7 @@ public class MovingPercentilesPipelineAggregator extends PipelineAggregator {
         return ((InternalHDRPercentiles) propertyValue).getState();
     }
 
-    private IllegalArgumentException buildResolveError(
+    private static IllegalArgumentException buildResolveError(
         MultiBucketsAggregation agg,
         List<String> aggPathsList,
         Object propertyValue,
@@ -254,14 +254,11 @@ public class MovingPercentilesPipelineAggregator extends PipelineAggregator {
         }
     }
 
-    private int clamp(int index, int length) {
+    private static int clamp(int index, int length) {
         if (index < 0) {
             return 0;
         }
-        if (index > length) {
-            return length;
-        }
-        return index;
+        return Math.min(index, length);
     }
 
     // TODO: replace this with the PercentilesConfig that's used by the percentiles builder.
