@@ -16,8 +16,9 @@ import org.elasticsearch.cluster.block.ClusterBlockException;
 import org.elasticsearch.cluster.block.ClusterBlockLevel;
 import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.service.ClusterService;
-import org.elasticsearch.common.inject.Inject;
 import org.elasticsearch.common.regex.Regex;
+import org.elasticsearch.injection.guice.Inject;
+import org.elasticsearch.tasks.CancellableTask;
 import org.elasticsearch.tasks.Task;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.TransportService;
@@ -31,12 +32,13 @@ import org.elasticsearch.xpack.core.ilm.action.GetLifecycleAction.Response;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
 public class TransportGetLifecycleAction extends TransportMasterNodeAction<Request, Response> {
+
+    private final IndexNameExpressionResolver indexNameExpressionResolver;
 
     @Inject
     public TransportGetLifecycleAction(
@@ -53,18 +55,24 @@ public class TransportGetLifecycleAction extends TransportMasterNodeAction<Reque
             threadPool,
             actionFilters,
             Request::new,
-            indexNameExpressionResolver,
             Response::new,
-            ThreadPool.Names.SAME
+            threadPool.executor(ThreadPool.Names.MANAGEMENT)
         );
+        this.indexNameExpressionResolver = indexNameExpressionResolver;
     }
 
     @Override
     protected void masterOperation(Task task, Request request, ClusterState state, ActionListener<Response> listener) {
+        assert task instanceof CancellableTask : "get lifecycle requests should be cancellable";
+        final CancellableTask cancellableTask = (CancellableTask) task;
+        if (cancellableTask.notifyIfCancelled(listener)) {
+            return;
+        }
+
         IndexLifecycleMetadata metadata = clusterService.state().metadata().custom(IndexLifecycleMetadata.TYPE);
         if (metadata == null) {
             if (request.getPolicyNames().length == 0) {
-                listener.onResponse(new Response(Collections.emptyList()));
+                listener.onResponse(new Response(List.of()));
             } else {
                 listener.onFailure(
                     new ResourceNotFoundException("Lifecycle policy not found: {}", Arrays.toString(request.getPolicyNames()))
@@ -78,7 +86,7 @@ public class TransportGetLifecycleAction extends TransportMasterNodeAction<Reque
                 names = Arrays.asList(request.getPolicyNames());
             }
 
-            if (names.size() > 1 && names.stream().filter(Regex::isSimpleMatchPattern).count() > 0) {
+            if (names.size() > 1 && names.stream().anyMatch(Regex::isSimpleMatchPattern)) {
                 throw new IllegalArgumentException(
                     "wildcard only supports a single value, please use comma-separated values or a single wildcard value"
                 );
@@ -88,6 +96,9 @@ public class TransportGetLifecycleAction extends TransportMasterNodeAction<Reque
             for (String name : names) {
                 if (Regex.isSimpleMatchPattern(name)) {
                     for (Map.Entry<String, LifecyclePolicyMetadata> entry : metadata.getPolicyMetadatas().entrySet()) {
+                        if (cancellableTask.notifyIfCancelled(listener)) {
+                            return;
+                        }
                         LifecyclePolicyMetadata policyMetadata = entry.getValue();
                         if (Regex.simpleMatch(name, entry.getKey())) {
                             policyResponseItemMap.put(
